<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.SettingFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_gelap"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Tombol Logout -->
   <LinearLayout
       android:id="@+id/logout_container"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_vertical"
       android:padding="8dp"
       app:layout_constraintTop_toBottomOf="@id/switch_theme"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="16dp">

       <ImageView
           android:id="@+id/logout_icon"
           android:layout_width="24dp"
           android:layout_height="24dp"
           android:src="@drawable/outline_arrow_circle_right_24"
           android:contentDescription="@string/logout"
           android:layout_marginEnd="8dp" />

       <!-- Teks Logout -->
       <TextView
           android:id="@+id/logout_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/keluar"
           android:textSize="18sp"
           android:textColor="@color/black" />

   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>